--- a/example-provider/pom.xml
+++ b/example-provider/pom.xml
@@ -17,7 +17,7 @@
   <dependencies>
     <dependency>
       <groupId>com.mmm</groupId>
-      <artifactId>mmm-rpc-easy</artifactId>
+      <artifactId>mmm-rpc-core</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
