--- a/example-provider/pom.xml
+++ b/example-provider/pom.xml
@@ -42,5 +42,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+<!--    https://github.com/etcd-io/jetcd-->
+    <dependency>
+      <groupId>io.etcd</groupId>
+      <artifactId>jetcd-core</artifactId>
+      <version>0.7.7</version>
+    </dependency>
   </dependencies>
 </project>
